[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptcache"
version = "0.1.0"
description = "A decorator that adapts cache TTL to how often each call is actually reused."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Brayan" }]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=4.0"]
sqlalchemy = ["sqlalchemy>=1.4"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "redis>=4.0", "sqlalchemy>=1.4", "fastapi>=0.100", "httpx>=0.24", "mypy>=1.8", "ruff>=0.5", "black>=24.0", "isort>=5.13"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptcache*"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]

[tool.black]
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# These files call pytest.importorskip("redis"/"sqlalchemy") before
# importing that same optional dependency, which is the standard pytest
# idiom for "skip this whole file if the dependency isn't installed" --
# importing it any earlier would defeat the point (it'd raise ImportError
# before pytest gets a chance to skip gracefully). E402 doesn't know that,
# so it's silenced here rather than worked around with an awkward reorder.
"tests/test_redis_backend.py" = ["E402"]
"tests/test_sqlalchemy_integration.py" = ["E402"]
